--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<link rel="stylesheet" href="./css/style.css">
-	<link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript>
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="css/style.css">
 	</noscript>
 	<style type="text/css">
+		/* non critical css */
 		[class^="icon-"]:before,
 		[class*=" icon-"]:before {
 			font-family: "some";
